# lab1-2022112534

./: .clang-tidy  CMakeLists.txt  Easy Test2.txt  g.dot  lab1.cpp  lab1.h  main.cpp  sample.txt
tests/: test_code.cpp  white_test_code.cpp
